<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thatcherbm.floortiling.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/hwMnyTtl"
            android:textSize="24sp"
            android:textAlignment="center" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp">

            <TextView
                android:text="@string/tlSzTtl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tlSzTtl"
                android:layout_weight="1"
                android:textSize="24sp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center" />

            <RadioButton
                android:text="@string/rd12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rdBtn12"
                android:layout_weight="1"
                android:textSize="20sp"
                android:checked="true" />

            <RadioButton
                android:text="@string/rd18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rdBtn18"
                android:layout_weight="1"
                android:textSize="20sp" />
        </RadioGroup>

        <TableLayout
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/lengthLbl"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/lengthLbl"
                    android:textAlignment="textEnd"
                    android:layout_width="80dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:inputType="number"
                    android:ems="8"
                    android:id="@+id/lengthIn"
                    android:textColor="@android:color/black"
                    android:background="@android:color/background_light"
                    android:layout_margin="10dp"
                    android:textAlignment="center"
                    android:hint="@string/hint"
                    android:textColorHint="@android:color/darker_gray"
                    android:layout_height="40dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:text="@string/widthLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/widthLbl"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="textEnd" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:inputType="number"
                    android:ems="8"
                    android:background="@android:color/background_light"
                    android:layout_margin="10dp"
                    android:id="@+id/widthIn"
                    android:textAlignment="center"
                    android:hint="@string/hint"
                    android:textColorHint="@android:color/darker_gray"
                    android:textColor="@android:color/black" />

            </TableRow>

        </TableLayout>

        <Button
            android:text="@string/calcBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calcBtn"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:id="@+id/outputFld"
            android:minEms="10" />

    </LinearLayout>

</RelativeLayout>
